# taraxa-node

./: .Jenkinsfile.swp  .clang-format  .dep.inc  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  GITHUB_TOKEN  GenesisState.cpp  Jenkinsfile  LICENSE  LICENSE.md  Makefile  Makefile.aleth  Makefile.common  Makefile.dependencies  Makefile.submodules  Makefile_common.mk  Makefile_submodules.mk  Makefile_submodules.sh  README.md  SimpleDBFace.cpp  SimpleDBFace.h  SimpleDBFactory.h  SimpleOverlayDBDelegate.cpp  SimpleOverlayDBDelegate.h  SimpleStateDBDelegate.cpp  SimpleStateDBDelegate.h  SimpleTaraxaRocksDBDelegate.cpp  SimpleTaraxaRocksDBDelegate.h  StateRegistry.cpp  StateRegistry.hpp  TransactionOrderManager.cpp  TransactionOrderManager.hpp  _a_e_s_8cpp.html  _a_e_s_8h.html  _a_e_s_8h.js  (+7127 more)
libraries/: CMakeLists.txt
libraries/aleth/: CMakeLists.txt
libraries/app/: CMakeLists.txt
libraries/cli/: CMakeLists.txt
libraries/common/: CMakeLists.txt
libraries/config/: CMakeLists.txt
libraries/consensus/: CMakeLists.txt
libraries/core_libs/: CMakeLists.txt
libraries/dag/: CMakeLists.txt
libraries/final_chain/: CMakeLists.txt
libraries/graphql/: CMakeLists.txt
libraries/logger/: CMakeLists.txt
libraries/metrics/: CMakeLists.txt
libraries/network/: CMakeLists.txt
libraries/node/: CMakeLists.txt
libraries/plugin/: CMakeLists.txt
libraries/spdlogger/: CMakeLists.txt
libraries/storage/: CMakeLists.txt
libraries/transaction_manager/: CMakeLists.txt
libraries/types/: CMakeLists.txt
libraries/vdf/: CMakeLists.txt
programs/taraxa-bootnode/: CMakeLists.txt  README.md  main.cpp
programs/taraxad/: CMakeLists.txt  main.cpp
programs/taraxan/: CMakeLists.txt  main.cpp
programs/taraxap/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  block_proposer.cpp  block_proposer.hpp  chain_config.cpp  chain_config.hpp  config.cpp  config.hpp  dag.cpp  dag.hpp  dag_block.cpp  dag_block.hpp  dag_block_manager.cpp  dag_block_manager.hpp  db_storage.cpp  db_storage.hpp  executor.cpp  executor.hpp  final_chain.cpp  final_chain.hpp  final_chain_test.cpp  full_node.cpp  full_node.hpp  log.cpp  log.hpp  main.cpp  network.cpp  network.hpp  pbft_chain.cpp  pbft_chain.hpp  pbft_config.cpp  pbft_manager.cpp  pbft_manager.hpp  replay_protection_service.cpp  replay_protection_service.hpp  replay_protection_service_test.cpp  sortition.cpp  sortition.hpp  state_api.cpp  state_api.hpp  state_api_test.cpp  (+22 more)
src/aleth/: BlockDetails.cpp  BlockDetails.h  BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  ChainDB.h  ChainDBImpl.cpp  ChainDBImpl.h  Common.cpp  Common.h  CommonNet.h  Exceptions.h  JsonHelper.cpp  JsonHelper.h  LocalizedTransaction.h  LogEntry.cpp  LogEntry.h  LogFilter.cpp  LogFilter.h  Transaction.cpp  Transaction.h  TransactionReceipt.cpp  TransactionReceipt.h  TrieCommon.cpp  TrieCommon.h  TrieHash.cpp  TrieHash.h  database.cpp  database.hpp  db.h  dummy_eth_apis.hpp  filter_api.cpp  filter_api.hpp  node_api.cpp  node_api.hpp  pending_block.cpp  pending_block.hpp  state_api.cpp  state_api.hpp
src/app_base/: CMakeLists.txt  Makefile  Makefile_common.mk  Makefile_submodules.mk  readme.md
src/chain/: chain_config.cpp  chain_config.hpp  final_chain.cpp  final_chain.hpp  state_api.cpp  state_api.hpp
src/cli/: CMakeLists.txt  config.cpp  config.hpp  default_config.hpp  devnet_config.hpp  testnet_config.hpp  tools.cpp  tools.hpp
src/common/: CMakeLists.txt  constants.cpp  constants.hpp  static_init.hpp  types.cpp  types.hpp
src/config/: CMakeLists.txt  chain_config.hpp  config.cpp  config.hpp  config_exception.hpp
src/consensus/: CMakeLists.txt  block_proposer.cpp  block_proposer.hpp  data.cpp  data.hpp  executor.cpp  executor.hpp  pbft_chain.cpp  pbft_chain.hpp  pbft_config.hpp  pbft_manager.cpp  pbft_manager.hpp  sync_block.cpp  sync_block.hpp  sync_queue.cpp  sync_queue.hpp  vote.cpp  vote.hpp  vote_manager.cpp  vote_manager.hpp  vrf_wrapper.hpp
src/dag/: CMakeLists.txt  dag.cpp  dag.hpp  dag_block.cpp  dag_block.hpp  dag_block_manager.cpp  dag_block_manager.hpp  proposal_period_levels_map.cpp  proposal_period_levels_map.hpp  vdf_sortition.cpp  vdf_sortition.hpp
src/final_chain/: CMakeLists.txt  ChainDB.h  ChainDBImpl.h  LogFilter.cpp  LogFilter.h  TrieCommon.cpp  TrieCommon.h  data.cpp  data.hpp  final_chain.cpp  final_chain.hpp  replay_protection_service.cpp  replay_protection_service.hpp  state_api.cpp  state_api.hpp  state_api_data.cpp  state_api_data.hpp  trie_common.cpp  types.h
src/libdevcore/: CommonData.cpp  CommonJS.h
src/libdevcrypto/: AES.cpp
src/libp2p/: RLPXPacket.h  UDP.cpp  UPnP.cpp
src/logger/: CMakeLists.txt  Config.cpp  Config.hpp  config.cpp  log.cpp  log.hpp  logger_config.cpp  logger_config.hpp
src/net/: CMakeLists.txt  Eth.cpp  Eth.h  Eth.jsonrpc.json  EthClient.h  EthFace.h  Net.cpp  NetClient.h  NetFace.h  RpcServer.cpp  RpcServer.h  Taraxa.cpp  Taraxa.h  Taraxa.jsonrpc.json  TaraxaClient.h  TaraxaFace.h  TaraxaGqlSchema.cpp  TaraxaGqlSchema.h  TaraxaGqlSchemaImpl.cpp  TaraxaGqlSchemaImpl.h  Taraxa_test.cpp  Test.cpp  Test.h  Test.jsonrpc.json  TestClient.h  (+4 more)
submodules/: .gitignore  CMakeLists.txt  CMakeLists_bls.cmake  Makefile  Makefile.sh  Makefile_env.sh  Makefile_submodules.mk
tests/: CMakeLists.txt  abi_test.cpp  add_transaction.cpp  add_vote.cpp  bin2hex.cpp  cache_test.cpp  create_receive.cpp  create_send.cpp  create_transient_vote.cpp  crypto_test.cpp  dag_block_test.cpp  dag_test.cpp  encoding_test.cpp  final_chain_test.cpp  full_node_test.cpp  gas_pricer_test.cpp  generate_private_key.cpp  generate_private_key_from_seed.cpp  hardfork_test.cpp  network_test.cpp  p2p_test.cpp  pbft_chain_test.cpp  pbft_manager_test.cpp  pbft_rpc_test.cpp  pillar_block_test.cpp  pillar_chain_test.cpp  pillar_test.cpp  print_key_info.cpp  py_test.cpp  replay_protection_service_test.cpp  rewards_stats_test.cpp  rpc_taraxa_test.cpp  rpc_test.cpp  sign_message.cpp  sortition_test.cpp  state_api_test.cpp  taraxa_test.cpp  tarcap_threadpool_test.cpp  tarcap_tp_test.cpp  timing_machine_test.cpp  (+3 more)
(+2668 files in other folders)
